--- a/test/support/config/institutions.yml
+++ b/test/support/config/institutions.yml
@@ -1,14 +1,14 @@
 NYU:
   login_attributes:
-    link_code: NYSID
-    logout_url: 'http://bobcat.library.nyu.edu/nysid'
-  default_institution: true
+    link_code: NYU
+    logout_url: 'http://bobcat.library.nyu.edu'
+  default_institution: false
   display_name: NYU Libraries
   view_attributes:
     test_view_attribute1: test_attribute1_nyu
     test_view_attribute2: test_attribute2_nyu
   ip_addresses:
-    - 128.122.0.0-128.122.149.239
+    - 128.122.0.0-128.122.149.238
     - 172.26.*.*
     - 172.27.*.*
     - 172.22.88.*
@@ -16,7 +16,7 @@ NYU:
     - 128.238.*.*
     
 NYUAD:
-  default_institution: false
+  default_institution: true
   display_name: NYUAD Library
   view_attributes:
     test_view_attribute1: test_attribute1_nyuad
