--- a/test/vcr_cassettes/bor_info_valid_newschool.yml
+++ b/test/vcr_cassettes/bor_info_valid_newschool.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://logindev.library.nyu.edu/pds
     body:
       encoding: US-ASCII
-      string: func=get-attribute&attribute=bor_info&calling_system=authpds&pds_handle=272201212284614806184193096120278
+      string: func=get-attribute&attribute=bor_info&calling_system=authpds&pds_handle=12112012151951298522252282669924
     headers:
       Accept:
       - ! '*/*'
@@ -17,7 +17,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 12 Nov 2012 19:21:04 GMT
+      - Mon, 12 Nov 2012 20:20:52 GMT
       Server:
       - Apache/2.2.15 (Unix) mod_ssl/2.2.15 OpenSSL/0.9.8n mod_perl/2.0.4 Perl/v5.8.9
       Transfer-Encoding:
@@ -26,8 +26,10 @@ http_interactions:
       - text/html; charset=UTF-8
     body:
       encoding: US-ASCII
-      string: <?xml version="1.0" encoding="UTF-8" ?><pds><error>Error User does not
-        exist</error></pds>
+      string: <?xml version = "1.0" encoding = "UTF-8"?><bor-info><id>N00206454</id><expiry-date>20120420</expiry-date><alpha>L</alpha><birth-date>00000000</birth-date><con-lng>ENG</con-lng><delinq-1>00</delinq-1><delinq-1-update-date>00000000</delinq-1-update-date><delinq-2>00</delinq-2><delinq-2-update-date>00000000</delinq-2-update-date><delinq-3>00</delinq-3><delinq-3-update-date>00000000</delinq-3-update-date><home-library>TNSFO</home-library><id>N00206454</id><name>Jones,
+        Allen</name><name-key>jones allen                           N00206454</name-key><open-date>20060807</open-date><update-date>20120718</update-date><address-0>Jones,
+        Allen</address-0><address-1>2027 85th Street, No 2</address-1><address-3>Brooklyn</address-3><zip>112143244</zip><bor-status>31</bor-status><expiry-date>20120915</expiry-date><barcode>21207100410084</barcode><bor-status>31</bor-status><bor-type>0</bor-type><name>Allen</name><email>jonesa@newschool.edu</email><cn>Jones,
+        Allen</cn><givenname>Allen</givenname><sn>Jones</sn><verification>JONE</verification><nyuidn>N00206454</nyuidn><ill-permission>Y</ill-permission><college_code></college_code><college_name></college_name><dept_code></dept_code><dept_name></dept_name><major_code></major_code><major></major><email_address>jonesa@newschool.edu</email_address><institute>NS</institute></bor-info>
     http_version: 
-  recorded_at: Mon, 12 Nov 2012 19:21:04 GMT
+  recorded_at: Mon, 12 Nov 2012 20:20:52 GMT
 recorded_with: VCR 2.3.0
